fix: improved code readability

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -40,11 +40,11 @@
         height: 50%;
     }
     header{
-        width: 100vw;
-        margin-left: 0;
+        width: 100%;
+        
     }
     .left-sidebar{
-        width: 10vw;
+        width: 50px;
     }
     .logo{
         display: none;
@@ -73,4 +73,5 @@
     .small-logo{
         display: inline-block;
     }
+    
 }
